change form method from POST to GET in contact.html

--- a/contact.html
+++ b/contact.html
@@ -96,7 +96,7 @@
           </div>
         </fieldset>
       </fieldset>
-      <form action="submit.html" method="post">
+      <form action="submit.html" method="get">
         <br />
         <fieldset>
           <fieldset>
